:rocket: Flash messages

--- a/src/app/views/auth/signin.njk
+++ b/src/app/views/auth/signin.njk
@@ -3,6 +3,8 @@
   <img src="/images/logo.svg" height="42" />
   <input type="file" id="avatar" name="avatar" />
 
+  {% include "_partials/flash.njk" %}
+
   <input type="email" name="email" placeholder="Seu e-mail" />
   <input type="password" name="password" placeholder="Senha secreta" />
 
