--- a/src/app/views/dashboard.njk
+++ b/src/app/views/dashboard.njk
@@ -15,6 +15,9 @@
     </li>
     {% endfor %}
   </ul>
+  {% if (user.provider === true) %}
+  <a href="/app/schedule">Meus agendamentos</a>
+  {% endif %}
   <a href="/app/logout" class="logout">Sair</a>
 </div>
 
